mmc-utils: add ability to flush optional eMMC cache
The eMMC v5.0 introduces the cache-flush-command. Let's add a corresponding
command to trigger the cache to be flushed during some potential
power-failure conditions.

Signed-off-by: Michele Dionisio <michele.dionisio@gmail.com>
Reviewed-by: Bean Huo <beanhuo@micron.com>
Reviewed-by: Avri Altman <avri.altman@sandisk.com>
Link: https://lore.kernel.org/r/20250714064807.1915470-1-michele.dionisio@gmail.com
Signed-off-by: Ulf Hansson <ulf.hansson@linaro.org>

--- a/man/mmc.1
+++ b/man/mmc.1
@@ -109,6 +109,10 @@ NOTE! The cache is an optional feature on devices >= eMMC4.5.
 Disable the eMMC cache feature on <device>.
 NOTE! The cache is an optional feature on devices >= eMMC4.5.
 .TP
+.BR "cache flush <device>"
+Flush the eMMC cache on <device>.
+NOTE! The cache is an optional feature on devices >= eMMC5.0.
+.TP
 .BR "<cmd> --help"
 Show detailed help for a command or subset of commands.
 
